# Expenses-Tracker

./: .gitignore  README.md  config.yaml  expenses.db  main_streamlit.py  pyproject.toml
expenses_tracker/: database.py
pages/: db.py  plotting.py
